--- a/_config.yml
+++ b/_config.yml
@@ -12,17 +12,17 @@ show_excerpts: true # set to true to show excerpts on the homepage
 sass:
   sass_dir: _sass
 plainwhite:
-  name: Adam Denisov
-  tagline: Developer. Designer
+  name: Chengda Zhang, MD
+  tagline: Critical care fellow
   date_format: "%b %-d, %Y"
   sitemap: true # set to true to generate sitemap.xml content
 
   # generate social links in footer
   social_links:
-    twitter: thelehhman
-    github:  thelehhman
+    twitter: zhangcd07
+    github:  zhangcd07
     linkedIn: in/thelehhman
-    rss: rss
+    # rss: rss
     # dribbble: jekyll
     # flickr:   jekyll
     # instagram: jekyll
