--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ plainwhite:
   social_links:
     twitter: zhangcd07
     github:  zhangcd07
-    linkedIn: in/thelehhman
+    linkedIn: in/chengda
     # rss: rss
     # dribbble: jekyll
     # flickr:   jekyll
